--- a/TFoR.html
+++ b/TFoR.html
@@ -7,7 +7,7 @@
         <script src="TFoR.js"></script>
     </head>
     <body>
-    <h1>The Future of Planet Earth</h1><a>HELP</a>
+    <h1>The Future of Planet Earth</h1><a href="help.html">HELP</a>
     <div id='container'>    
         <div id="earth">
              <div class="pollution-energy">Pollution : <span id="totalPollutionValue"></span>
