--- a/help.html
+++ b/help.html
@@ -19,6 +19,7 @@
       <li><span> Click on "Buy" to purchase the options on the right, they will help you progress throughout the  game.</span></li>
         <li><span> Be careful of not to fill our Earth with too much Pollution, or else!</span></li>
         </ul>
+        <a href="TFoR.html">Go back</a>
         </div>
     </body>
 </html>
